fixed more-number spacing

--- a/css/exalton.css
+++ b/css/exalton.css
@@ -840,6 +840,7 @@ transition: 0.25s;
   font-family: 'fieldwork', sans-serif;
   font-weight: 400;
   font-size: 12vw;
+  line-height: 1.75em;
   color: var(--num-gray);
   position: absolute;
   right: 0;
